# qrmk

./: .gitignore  CMakeLists.txt  README.md  qrmk-test.pro  qrmk.pri  qrmk.pro
include/: QRmk
src/: qrmk.h  qrmk.pri  qrmk_global.h  qrmk_header.cpp  qrmk_header.h  qrmk_headers.cpp  qrmk_headers.h  qrmk_maker.cpp  qrmk_maker.h  qrmk_signature.cpp  qrmk_signature.h  qrmk_signatures.cpp  qrmk_signatures.h  src.cmake
src/private/: p_qrmk_maker.cpp  p_qrmk_maker.h
test/: main.cpp  qrmk-test.pri  qrmk_functional_test.cpp  qrmk_test.cpp  qrmk_test.h  qrmk_test_functional.h  qrmk_test_unit.h
